# DF-SCAN

./: .dockerignore  .gitignore  DATASET_INFO.md  DF_SCAN_INTERMEDIATE_PREPROCESSING.ipynb  Dockerfile  README.md  build-and-push.sh  create-sample-data.sh  data-sampling-v2.sh  datainfo.ipynb  docker-compose.yml  main.py  pre-build-check.sh  pyproject.toml  requirements.txt  run-batches.sh
backend/: app.py  main.py  model.py  utils.py
backend/utils/: cleanup.py  face_utils.py  frame_utils.py  inference.py
bash_scripts/: data-sampler.sh
docker_scripts/: DOCKER_GUIDE.md  build-and-push.sh
ff-c23/FaceForensics++_C23/csv/: DeepFakeDetection.csv  Deepfakes.csv  FF++_Metadata.csv  FF++_Metadata_Shuffled.csv  Face2Face.csv  FaceShifter.csv  FaceSwap.csv  Mean_Data.csv  NeuralTextures.csv  original.csv
frontend/: index.html  script.js  style.css
notebooks/: DF_SCAN_EXPERIMENT_100_BASELINE_MODEL.ipynb  DF_SCAN_EXPERIMENT_100_BASELINE_TEMPORAL_MODEL.ipynb  DF_model_training.ipynb
scripts/: detect_faces.py  detect_faces_v2.py  extract_frames.py  extract_frames_v2.py  organize_dataset.py  preprocessing.py  reconstruct_videos.py
