[project]
name = "df-scan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
